k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: papely-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: papely-backend
  template:
    metadata:
      labels:
        app: papely-backend
    spec:
      containers:
        - name: papely-backend
          image: thsxn/papely-backend:latest
          ports:
            - containerPort: 3000
