k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: papely-backend
spec:
  selector:
    app: papely-backend
  ports:
    - port: 80
      targetPort: 3000
